RAM Efficient FSDP Blog (#1412)
* initial draft

* Update ram-efficient-pytorch-fsdp.md

* Update ram-efficient-pytorch-fsdp.md

* compress images and add thumbnail

* Apply suggestions from code review

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>

* addressing comments

Co-Authored-By: Sylvain Gugger <35901082+sgugger@users.noreply.github.com>

* fix formatting

* fix example

* minor fixes

* address comments

* address comment

* minor fix

* minor fix

* Apply suggestions from code review

Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>

* addressing comments

---------

Co-authored-by: philschmid <schmidphilipp1995@gmail.com>
Co-authored-by: lewtun <lewis.c.tunstall@gmail.com>
Co-authored-by: Sylvain Gugger <35901082+sgugger@users.noreply.github.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2798,3 +2798,13 @@
     - comparison
     - bitsandbytes
     - gptq
+
+- local: ram-efficient-pytorch-fsdp
+  title: "Fine-tuning Llama 2 70B using PyTorch FSDP"
+  author: smangrul
+  thumbnail: /blog/assets/160_fsdp_llama/thumbnail.jpg
+  date: September 13, 2023
+  tags:
+    - llm
+    - guide
+    - nlp
