--- a/_blog.yml
+++ b/_blog.yml
@@ -2808,3 +2808,13 @@
     - llm
     - guide
     - nlp
+
+# - local: wuertschen
+#  title: "Introducing Würtschen: Fast Diffusion for Image Generation"
+#  author: dome272
+#  thumbnail: /blog/assets/wuertschen/thumbnail.png
+#  date: September 13, 2023
+#  tags:
+#    - diffusion
+#    - diffusers
+#    - text-to-image
