make wuertschen public

--- a/_blog.yml
+++ b/_blog.yml
@@ -2809,12 +2809,12 @@
     - guide
     - nlp
 
-# - local: wuertschen
-#  title: "Introducing Würtschen: Fast Diffusion for Image Generation"
-#  author: dome272
-#  thumbnail: /blog/assets/wuertschen/thumbnail.png
-#  date: September 13, 2023
-#  tags:
-#    - diffusion
-#    - diffusers
-#    - text-to-image
+- local: wuertschen
+  title: "Introducing Würtschen: Fast Diffusion for Image Generation"
+  author: dome272
+  thumbnail: /blog/assets/wuertschen/thumbnail.png
+  date: September 13, 2023
+  tags:
+    - diffusion
+    - diffusers
+    - text-to-image
