--- a/_blog.yml
+++ b/_blog.yml
@@ -2778,11 +2778,11 @@
     - diffusers
     - diffusion
 
-- local: getting_the_most_out_of_LLMs
-  title: "Getting the most out of LLMs"
+- local: optimize-llm
+  title: "Optimizing your LLM in production"
   author: patrickvonplaten
-  thumbnail: /blog/assets/163_getting_most_out_of_llms/self_attn_tokens.png
-  date: Sep 11, 2023
+  thumbnail: /blog/assets/163_optimize_llm/self_attn_tokens.png
+  date: Sep 18, 2023
   tags:
     - nlp
     - research
