Blog post about how to optimize LLMs for memory and speed (#1473)
* correct ((

* [LLMs] Getting most out of LLMS

* finish

* finish

* Fix

* finish

* finish

* finish

* finish

* Apply suggestions from code review

Co-authored-by: Younes Belkada <49240599+younesbelkada@users.noreply.github.com>
Co-authored-by: Joao Gante <joaofranciscocardosogante@gmail.com>

* improve

---------

Co-authored-by: Younes Belkada <49240599+younesbelkada@users.noreply.github.com>
Co-authored-by: Joao Gante <joaofranciscocardosogante@gmail.com>

--- a/_blog.yml
+++ b/_blog.yml
@@ -2777,7 +2777,7 @@
     - collaboration
     - diffusers
     - diffusion
-    
+
 - local: safecoder-vs-closed-source-code-assistants
   title: "SafeCoder vs. Closed-source Code Assistants"
   author: julsimon
@@ -2818,3 +2818,13 @@
     - diffusion
     - diffusers
     - text-to-image
+
+# - local: optimize-llm
+#   title: "Optimizing your LLM in production"
+#   author: patrickvonplaten
+#   thumbnail: /blog/assets/163_optimize_llm/self_attn_tokens.png
+#   date: Sep 18, 2023
+#   tags:
+#     - nlp
+#     - research
+#     - LLM
