--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -829,6 +829,19 @@
     - research
     - diffusers
 
+- local: encrypted-llm
+  title: "使用 FHE 实现加密大语言模型"
+  author: RomanBredehoft
+  guest: true
+  thumbnail: /blog/assets/encrypted-llm/thumbnail.png
+  date: August 02, 2023
+  tags:
+    - guide
+    - privacy
+    - research
+    - FHE
+    - llm
+
 - local: dpo-trl
   title: "使用 DPO 微调 Llama 2"
   author: kashif
