Rafaelpadilla/object detection leaderboard (#1461)
* first part of the blog post (draft mode)

* adding images and equation

* including new image and html for images

* adding more content

* including introduction

* conclusion + images

* adding tables

* include image

* fixing typos and adding images in moon-landing

* fix links

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* removing bold as suggested by @osanseviero

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

* Update object-detection-leaderboard.md

Co-aut

--- a/_blog.yml
+++ b/_blog.yml
@@ -2828,3 +2828,17 @@
     - nlp
     - research
     - LLM
+
+- local: object-detection-leaderboard
+  title: "Object Detection Leaderboard"
+  author: rafaelpadilla
+  guest: true
+  thumbnail: /blog/assets/object-detection-leaderboard/thumbnail.png
+  date: September 18, 2023
+  tags:
+    - community
+    - guide
+    - cv
+    - leaderboard
+    - evaluation
+
