New case study rocket monney (#1513)
* Add files via upload

* Update _blog.yml

* Create rocketmoney-case-study.md

* Update rocketmoney-case-study.md

* Update _blog.yml

* Update _blog.yml

--- a/_blog.yml
+++ b/_blog.yml
@@ -2852,3 +2852,12 @@
     - guide
     - cv
     - game-dev
+    
+- local: rocketmoney-case-study
+  title: "Rocket Money x Hugging Face: Scaling Volatile ML Models in Production"
+  author: nicokuzak
+  guest: true
+  thumbnail: /blog/assets/78_ml_director_insights/rocketmoney.png
+  date: September 19, 2023
+  tags:
+    - case-studies
